@@ -6,7 +6,7 @@
 # For license conditions see the license file or http://eu-egee.org/license.html
 #
 ################################################################################
-# glite-lb-config v. 1.2.1
+# glite-lb-config v. 1.2.2
 #
 # Post-installation script for configuring the gLite Logging and Bookkeping Server
 # Robert Harakaly < robert.harakaly@cern.ch >
@@ -42,7 +42,7 @@ class glite_lb:
     def __init__(self):
         self.mysql = MySQL.Mysql()
         self.verbose = 0
-        self.version = "1.2.1"
+        self.version = "1.2.2"
         self.name = "glite-lb"
         self.friendly_name = "gLite Logging and Bookkeeping"
         
@@ -192,6 +192,20 @@ python %s-config [OPTION...]""" % (self.name, os.environ['GLITE_LOCATION'], \
             print 'The R-GMA Servicetool service has been stopped            ',
             glib.printOkMessage()
         
+        return 0
+        
+    def status(self):
+
+        error_level = 0
+
+        retval = self.mysql.stop()
+        if retval != 0:
+            error_level = retval
+
+        retval = os.system('%s/etc/init.d/glite-lb-bkserverd status' % os.environ['GLITE_LOCATION'])
+        if retval != 0:
+            error_level = retval
+
         return 0
         
     def configure(self):
@@ -414,8 +428,8 @@ if __name__ == '__main__':
             service.start()
             sys.exit(0)
         if o == "--status":
-            print "Not yet implemented"
-            sys.exit(1)
+            sys.exit(service.start())
+                
 
     # Check certificates
     if params.has_key('glite.installer.checkcerts'):
