@@ -1,4 +1,4 @@
 
-module.version = 1.2.1
+module.version = 1.2.2
 module.age = 1
 				
