@@ -1,5 +1,8 @@
+DATE: 21-03-2005 17:21
+[dimeglio] Implemented status method
+
 DATE: 21-03-2005 00:32
-[gdiez] Added PERL5LIB env var
+[dimeglio] Added PERL5LIB env var
 
 DATE: 17-03-2005 17:33
 [gdiez] Stopping and starting the database before the index creation (just after the database is created and the user granted)
